Dark mode fixes & allow custom app icons/images

--- a/src/global-styles/custom.scss
+++ b/src/global-styles/custom.scss
@@ -271,6 +271,7 @@ button {
   padding: 0.5rem 1.5rem;
   outline: 0 !important;
   border: none !important;
+  color: black !important;
 
   &:hover,
   &:focus,
